# ai-data-assistant

./: .env.example  .gitignore  README.md  all_code.txt  app.py  cli.py  pyproject.toml  requirements.txt  server.py
.github/: copilot-instructions.md
data/: workbook.xlsx
src/nl_data_assistant/: __init__.py  api.py  api_models.py  config.py  examples.py  main.py  models.py  streamlit_app.py  streamlit_workspace_app.py
src/nl_data_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nl_data_assistant/nlp/: __init__.py  ai_sql_generator.py  interpreter.py  local_parser.py  mysql_query_generator.py  table_blueprint.py
src/nl_data_assistant/services/: __init__.py  engine.py  excel_service.py  mysql_service.py  mysql_session_service.py  sync_service.py  visualization_service.py
src/nl_data_assistant/utils/: __init__.py  cleaning.py  schema.py
tests/: test_api.py  test_cleaning.py  test_interpreter.py  test_local_parser.py  test_mysql_query_generator.py  test_table_blueprint.py
