[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl-data-assistant"
version = "0.1.0"
description = "Natural-language assistant for Excel, MySQL, and visual analytics."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

